change it to my data

--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,21 @@
 menu:
     Blog: /
     Archive: /archives/
-    Weibo: http://weibo.com/sunchongsheng
-    GitHub: https://github.com/pinggod
-    Rss: /atom.xml
+    #Weibo: http://weibo.com/sunchongsheng
+    GitHub: https://github.com/lovenery
+    #Rss: /atom.xml
 
 favicon: /favicon.png
 logo: /favicon.png
 
 # Comment
 # e.g disqus: seansun
-disqus:
+disqus: seansun
 duoshuo:
 
 # Analytics
 # google-analytics:
-ga: UA-65933410-1
+ga: UA-78364563-3
 
 # Copyright Infomation
 startyear: 2015
