add medium link

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ menu:
     Archive: /archives/
     #Weibo: http://weibo.com/sunchongsheng
     GitHub: https://github.com/lovenery
+    Medium: https://medium.com/@lovenery
     #Rss: /atom.xml
 
 favicon: /favicon.png
